# fake-en-uk

./: .gitignore  README.md  fake-en-uk.cabal  stack.yaml
src/Fake/Provider/Person/: EN_UK.hs
src/Fake/Provider/Person/data/: commonFemaleNames.csv  commonMaleNames.csv  femaleNames.csv  lastNames.csv  maleNames.csv
