name:                fake-en-uk
version:             0.1
synopsis:            UK provider for randomly generated fake data
description:         Addition to fake package
license:             BSD3
license-file:        LICENSE
author:              Francis Nevard
maintainer:          francis@perplexing.net
copyright:           Francis Nevard
homepage:            https://github.com/matchwood/fake-en-uk
bug-reports:         https://github.com/matchwood/fake-en-uk/issues
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:


Source-repository head
  Type:     git
  Location: https://github.com/matchwood/fake-en-uk

library
  exposed-modules:
    Fake.Provider.Person.EN_UK

  other-modules:

  build-depends:
    base         >= 4.6 && < 4.12,
    text         >= 1.2 && < 1.3,
    file-embed   >= 0.0.10 && < 0.1,
    bytestring   >= 0.9.1.4,
    fake         >= 0.1 && < 0.2,
    vector       >= 0.11,
    split        >= 0.2


--    containers   >= 0.5 && < 0.6,
--    generics-sop >= 0.2 && < 0.4,
--    random       >= 1.1 && < 1.2,
--    time         >= 1.4 && < 1.10

  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

-- test-suite spec
--  type: exitcode-stdio-1.0
--  main-is: Main.hs
--  hs-source-dirs: test, src
--  other-modules:
--    Fake.Class
--    Fake.Combinators
--    Fake.Cover
--    Fake.Provider.Lang
--    Fake.Provider.Person.EN_US
--    Fake.Types
--
--  build-depends:
--    base,
--    hspec >= 2.4 && < 2.5,
--    random,
--    text,
--    time
--  ghc-options: -Wall -threaded -fno-warn-partial-type-signatures
--  default-language:    Haskell2010
--